# elr

./: .gitignore  HANDOFF.md  LICENSE  README.md  env.oci.yaml  pyproject.toml
.cursor/: environment.json
elr/: __init__.py  cli.py  config.py  dotenv.py  errors.py  profile.py  resolver.py  sops.py  sops_config.py
elr/providers/: __init__.py  oci.py
examples/: env.oci.yaml  envrc.sops  sops-config.yaml  sops.oci.yaml  user-config.yaml
examples/agents/: env.oci.yaml  pyproject.toml
examples/sops-demo/: .gitignore  README.md  demo.env.sops  env.oci.yaml  setup.sh
scripts/: agent_elr_runner.py  cursor_elr_bootstrap.sh  install.sh
tests/: test_agent_elr_runner.py  test_cli.py  test_config.py  test_config_overlay.py  test_oci_provider.py  test_profile.py  test_resolver.py  test_sops.py  test_sops_config.py
